[gd_scene load_steps=21 format=2]

[ext_resource path="res://Image/home.png" type="Texture" id=1]
[ext_resource path="res://Image/MusicalGuitar.png" type="Texture" id=2]
[ext_resource path="res://Image/bg1080x1920.jpg" type="Texture" id=3]
[ext_resource path="res://Scene/Click/SpengHead.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scene/Click/ClickSpeng.gd" type="Script" id=5]
[ext_resource path="res://Image/SequeneSpeng/sqSpeng-min.png" type="Texture" id=6]
[ext_resource path="res://Font/SanamDeklen_chaya.ttf" type="DynamicFontData" id=7]

[sub_resource type="DynamicFont" id=13]
size = 55
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 7 )

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 0, 0, 300, 300 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 300, 0, 300, 300 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 600, 0, 300, 300 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 900, 0, 300, 300 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 1200, 0, 300, 300 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 1500, 0, 300, 300 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 1800, 0, 300, 300 )

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 2100, 0, 300, 300 )

[sub_resource type="AtlasTexture" id=10]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 2400, 0, 300, 300 )

[sub_resource type="AtlasTexture" id=11]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 2700, 0, 300, 300 )

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="DynamicFont" id=12]
size = 88
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 7 )

[node name="Floating_" type="Node2D"]
script = ExtResource( 5 )

[node name="Bg" type="Sprite" parent="."]
texture = ExtResource( 3 )
centered = false

[node name="Click_" type="Label" parent="."]
margin_left = 57.0
margin_top = 38.0
margin_right = 120.0
margin_bottom = 115.0
custom_colors/font_color = Color( 0.92549, 0.972549, 0.113725, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 13 )
text = "00"
align = 1

[node name="HomeBT" type="TextureButton" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 463.0
margin_top = 1764.0
margin_right = 591.0
margin_bottom = 1902.0
texture_normal = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
modulate = Color( 0, 0, 0, 1 )
position = Vector2( 600, 1010 )
frames = SubResource( 1 )
speed_scale = 0.0
playing = true

[node name="Label" type="Label" parent="."]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = 169.0
margin_top = 848.0
margin_right = 916.0
margin_bottom = 1151.0
custom_colors/font_color = Color( 1, 0, 0, 1 )
custom_fonts/font = SubResource( 12 )
text = "Click a cartoon head.
There are only one."
align = 1
valign = 1

[node name="speng_right" parent="." instance=ExtResource( 4 )]
position = Vector2( 200, 259 )

[node name="GuitarSprite" type="Sprite" parent="speng_right"]
visible = false
texture = ExtResource( 2 )

[node name="Timer" type="Timer" parent="speng_right/GuitarSprite"]
wait_time = 2.0

[connection signal="pressed" from="HomeBT" to="." method="_on_HomeBT_pressed"]
[connection signal="timeout" from="speng_right/GuitarSprite/Timer" to="." method="_on_Timer_timeout"]
